// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storage-settings-junit-form Renders \`storage-settings-junit-form\` with custom form and history 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout"
    >
      <div
        class="text-subtitle-1 font-weight-bold"
      >
      JUnit data storage
      </div>
      <!---->
    </div>
    <div
      class="layout mt-2"
    >
      <span
        class="text--secondary"
      >
        <storage-settings-history-message-stub
          history="1611210000"
        />
      </span>
    </div>
    <c-enabled-duration-field-stub
      help-text="When switched on, the JUnit test suites data (XMLs, screenshots and videos) will be deleted after the defined time period."
      label="Delete test suites data after"
      name="junit.delete_after"
    />
  </div>
</div>
`;

exports[`storage-settings-junit-form Renders \`storage-settings-junit-form\` with default form 1`] = `
<div
  class="layout column"
>
  <div
    class="layout c-information-block column"
  >
    <div
      class="layout"
    >
      <div
        class="text-subtitle-1 font-weight-bold"
      >
      JUnit data storage
      </div>
      <!---->
    </div>
    <!---->
    <c-enabled-duration-field-stub
      help-text="When switched on, the JUnit test suites data (XMLs, screenshots and videos) will be deleted after the defined time period."
      label="Delete test suites data after"
      name="junit.delete_after"
      value="[object Object]"
    />
  </div>
</div>
`;
